# frontend/openapi.json
@@ -524,6 +524,22 @@
       }
      },
      {
+      "name": "search",
+      "in": "query",
+      "required": false,
+      "schema": {
+       "anyOf": [
+        {
+         "type": "string"
+        },
+        {
+         "type": "null"
+        }
+       ],
+       "title": "Search"
+      }
+     },
+     {
       "name": "page",
       "in": "query",
       "required": false,
